--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: lightseagreen;
   }
   h1 {
-    color: indianred;
+    color: maroon;
   }
   h2 {
     color: rgb(145, 145, 202);
