--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,11 @@ a:hover {
 }
 nav ul {
   list-style-type: none;
+  padding: 0;
 }
 nav li {
   display: inline;
+  float: left;
 }
 nav a:link, nav a:visited {
   background-color: green;
