--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,8 @@ nav ul {
   padding: 0;
 }
 nav li {
-  display: inline;
+  
+  float: left;
 }
 nav a:link, nav a:visited {
   background-color: green;
