--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ nav li {
   float: left;
 }
 nav a:link, nav a:visited {
-  background-color: green;
+  background-color: SaddleBrown;
   color: gainsboro;
   display: block;
   width: 160px;
@@ -35,4 +35,14 @@ nav a:link, nav a:visited {
 }
 nav a:hover {
   background-color: blue;
+}
+header {
+  background-image: url("../images/eten.jpg");
+  height: 90px;
+}
+ header h1 {
+  color: rgba(256, 256, 256, .8);
+  text-align: right;
+  padding-right: 20px;
+  color: gainsboro;
 }
