--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ p {
 }
 @font-face {
   font-family: FinkHeavy;
-  src: url(font/FinkHeavy.ttf);
+  src: url(../font/FinkHeavy.ttf);
 }
 * {
   font-family: FinkHeavy, Arial, Helvetica, sans-serif;
@@ -82,7 +82,7 @@ footer {
   text-decoration: none;
 }
 #navbar a:hover {
-  background-color: blue;
+  background-color: maroon;
   color: antiquewhite;
 }
 /* Page content */
